js262/test/staging/sm/module/duplicate-exported-names-in-single-export-var-declaration.js


/*---
flags:
  - module
negative:
  phase: parse
  type: SyntaxError
description: |
  pending
esid: pending
---*/

export var a, a;
$DONOTEVALUATE();
